feat: make hybrid module resolution the default, drop JavaFX special-casing
Module-path resolution used to kick in only for JavaFX (string-matched on
`org/openjfx/javafx-`), while the generic hybrid path sat behind the
`-Djbang.hybrid.module.resolve` PoC flag.

Run hybrid resolution unconditionally (JDK 9+): promote every resolved real
(non-automatic) module plus its transitive `requires` onto the `--module-path`
and add them as roots, leaving plain/automatic jars on the class-path. This
covers JavaFX, `//MODULE` scripts, and any other modular dependency uniformly,
so the JavaFX-specific detection (`hasJavaFX`, the `javafx`/`jdk.jsobject` name
matching) and the PoC flag are no longer needed.

`jdk.jsobject` (required by `javafx.web`, shipped separately since JDK 26) is
still handled, now via the requires-graph rather than a hard-coded name.

Verified: TestRun, DependencyResolverTest and TestArtifactInfo pass, including
all testJavaFX* cases.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>